# AZAI

./: AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml
app/: streamlit_app.py
azai/: __init__.py  config.py
azai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
azai/api/: __init__.py  main.py  schemas.py
azai/cli/: __init__.py  main.py
azai/data/: __init__.py  validation.py
azai/docking/: __init__.py  prepare_ligand.py  prepare_receptor.py  (+1 more)
docs/: api.md  citation.md  cli.md  docking.md  explainability.md  index.md  installation.md  literature_assistant.md  methodology.md  model_cards.md  probe_design.md  release_checklist.md  reporting.md  reproducibility.md  roadmap.md  stable_release.md  streamlit_troubleshooting.md
examples/: api_client_demo.py  baseline_model_demo.py  docking_export_demo.py  generate_report.py  literature_assistant_demo.py  xylazine_probe_demo.py
tests/: conftest.py  test_api_cli.py  test_baseline_models.py  test_batch.py  test_bundle_manifest.py  test_descriptors.py  test_docking.py  test_export_bundle.py  test_functional_groups.py  test_literature.py  test_model_cards.py  test_plots.py  test_probe_builder.py  test_probe_design_engine.py  test_probe_score.py  test_reference_database.py  test_release_health.py  test_report.py  test_reproducibility.py  test_scaffolds.py  test_selectivity.py  test_similarity.py  test_standardization.py  test_validation.py
(+46 files in other folders)
