[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azai"
version = "1.0.3"
description = "AI-Driven Xylazine Analytics and Innovation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Joy Karmakar"}]
keywords = ["cheminformatics", "xylazine", "fluorescence", "RDKit", "AI for science"]
dependencies = [
  "rdkit>=2023.9.1",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "plotly>=5.18",
  "streamlit>=1.31",
  "pydantic>=2.5",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6", "pre-commit>=3.7", "mkdocs>=1.6", "mkdocs-material>=9.5", "tabulate>=0.9"]
literature = ["sentence-transformers>=2.2", "chromadb>=0.4"]
ai = ["shap>=0.44"]

[project.scripts]
azai = "azai.cli.main:main"

[tool.setuptools.packages.find]
include = ["azai*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
